--- a/Frontend/src/app/components/footer/footer.html
+++ b/Frontend/src/app/components/footer/footer.html
@@ -11,7 +11,7 @@
     <span class="gmailid" *ngIf="contactEmail">{{contactEmail}}</span>
   </p>
 
-  <div class="footer-socials" *ngIf="showSocials">
+  <!-- <div class="footer-socials" *ngIf="showSocials">
     <a href="https://www.instagram.com" target="_blank" aria-label="Instagram" class="social-icon">
       <img class="insta-logo" src="/images/instagram.png" alt="Instagram" />
     </a>
@@ -21,5 +21,5 @@
     <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn" class="social-icon">
       <img class="linkedin-logo" src="/images/linkedin.png" alt="LinkedIn" />
     </a>
-  </div>
+  </div> -->
 </footer>
