--- a/Frontend/src/app/components/home/home.html
+++ b/Frontend/src/app/components/home/home.html
@@ -23,7 +23,7 @@
     <div class="hero-content">
       <div class="hero-text">
         <h1 class="hero-title">
-          <span class="title-line-1"><img src="/images/logo1.png" alt="" />Happenin'</span>
+          <span class="title-line-1"><img src="/images/logo1.png" alt="logo" />Happenin'</span>
           <span class="title-line-2"></span>
           <span class="title-highlight">Discover Amazing Events Near You</span>
         </h1>
